# marketing_ads

./: README.md
etl_project/: .gitignore  Readme.md  pyproject.toml  run_daily_job.py
etl_project/.tmp_dagster_home_19exvtxj/history/: runs.db
etl_project/.tmp_dagster_home_19exvtxj/history/runs/: index.db
etl_project/.tmp_dagster_home_19exvtxj/schedules/: schedules.db
etl_project/marketing_etl/: README.md  assets.py  definitions.py  gcs.py  setup.cfg  setup.py  snowflake_utils.py
marketing_ads_dbt/: pyproject.toml
marketing_ads_dbt/marketing_ads_dbt/: dbt_project.yml
marketing_ads_dbt/marketing_ads_dbt/models/: bronze.sql
marketing_ads_dbt/marketing_ads_dbt/models/example/: schema.yml
